--- a/index/index.html
+++ b/index/index.html
@@ -1,34 +1,47 @@
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl">
-
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
-  <meta http-equiv="Content-Language" content="pl" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>G&amp;HD - OFERTA</title>
-  <meta name="Keywords" content="
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-2" />
+    <meta http-equiv="Content-Language" content="pl" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>G&amp;HD - OFERTA</title>
+    <meta
+      name="Keywords"
+      content="
 reklama Resko, reklama Łobez, reklama płoty, reklamy, oklejanie samochodów,
 oklejanie sklepów, wydruki wielkoformatowe,tablice reklamowe,
 banery, oznakowania techniczne, ulotki, wizytówki, plakaty
-" />
-  <meta name="description" content="PROJEKT GRAFICZNY / WYKONANIE PRODUKTU / MONTAŻ.
+"
+    />
+    <meta
+      name="description"
+      content="PROJEKT GRAFICZNY / WYKONANIE PRODUKTU / MONTAŻ.
 Oklejanie pojazdów i sklepów, tablice wolnostojące, szyldy/tablice, banery, logo i napisy 3D, litery podświetlane, wizytówki, plakaty.
-Dojeżdżamy do klienta" />
-  <meta name="author" content="Roussoss" />
-  <meta name="wszelkie prawa" content="G&amp;HD" />
-  <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Acme&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css" />
-  <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
-</head>
+Dojeżdżamy do klienta"
+    />
+    <meta name="author" content="Roussoss" />
+    <meta name="wszelkie prawa" content="G&amp;HD" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kanit&family=Acme&family=Bangers&family=Alegreya&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="http://fonts.googleapis.com/css?family=Alata&subset=latin,latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
+  </head>
 
-<body>
-  <div id="background">
+  <body>
     <div id="header">
-      <img id="logo" src="/resources/header/logo.png">
-
+      <img id="logo" src="/resources/header/logo.png" />
     </div>
     <div id="topnav">
       <a href="#home" class="link active">Oferta</a>
@@ -40,7 +53,9 @@ Dojeżdżamy do klienta" />
       </a>
     </div>
     <div id="responsiveNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
       <div class="overlay-content">
         <a href="#home" class="link active">Oferta</a>
         <a href="#news" class="link">Galeria</a>
@@ -48,112 +63,354 @@ Dojeżdżamy do klienta" />
         <a href="#about" class="link">Kontakt</a>
       </div>
     </div>
-    <div id="caly">
-      <div class="main">
-        <div class="slider" id="slider">
-          <div class="slides current">
+    <div class="main">
+      <div class="slider" id="slider">
+        <div class="slides current">
+          <div class="description">
             <h1>Oklejanie witryn sklepów</h1>
             <p>Twój biznes w nowej odsłonie</p>
           </div>
-          <div class="slides">
-            <h1>Oznakowania techniczne</h1>
+        </div>
+        <div class="slides">
+          <div class="description">
+            <h1>Znaki techniczne</h1>
             <p>Dla firm, sklepów, zakładów przemysłowych</p>
           </div>
-          <div class="slides">
-            <div class="background2">
-              <h1>Szyldy i banery</h1>
-            </div>
-            <div class="background">
-              <p>Wysokiej jakości banery dla
-                każdej działalności</p>
-            </div>
+        </div>
+        <div class="slides">
+          <div class="description">
+            <h1>Szyldy i banery</h1>
+            <p>Wysokiej jakości banery dla każdej działalności</p>
           </div>
-          <div class="slides">
+        </div>
+        <div class="slides">
+          <div class="description">
             <h1>Oklejanie pojazdów</h1>
             <p>Dowolnie okleimy Twój samochód</p>
           </div>
-          <div class="slides slidelast">
+        </div>
+        <div class="slides slidelast">
+          <div class="description">
             <h1>Wydruki CAD</h1>
-            <p>Wielkoformatowe wydruki
-              map, projektów, planów i instalacji</p>
+            <p>Wielkoformatowe wydruki map, projektów, planów i instalacji</p>
           </div>
-          <i class="fa fa-angle-left prev" id="prev"></i>
-          <i class="fa fa-angle-right next" id="next"></i>
+        </div>
+        <i class="fa fa-angle-left prev" id="prev"></i>
+        <i class="fa fa-angle-right next" id="next"></i>
+      </div>
+    </div>
+
+    <div id="srodek">
+      <h1>Wykonujemy:</h1>
+      <div class="flexcontainer">
+        <div class="box">
+          <div class="circle">
+            1
+          </div>
+          <h2>Projekt Graficzny</h2>
+        </div>
+        <div class="box">
+          <div class="circle">
+            2
+          </div>
+          <h2>Realizacja Projektu</h2>
+        </div>
+        <div class="box">
+          <div class="circle">
+            3
+          </div>
+          <h2>Dowóz i Montaż</h2>
         </div>
       </div>
-
-      <div id="srodek">
-        OFERTA
-      </div>
-
-      <div id="dolny">
-        Firma wykonuje:<br /><br />
-
-        PROJEKT GRAFICZNY / WYKONANIE PRODUKTU / MONTAŻ<br /><br />
-
-        OKLEJANIE <br />
-        - Oklejenie witryn (szyb), pojazdów (powierzchni lakierowanych,
-        blachy),<br />
-        plastiku oraz innych materiałów nadających się do oklejenie. <br />
-        Oklejanie folią zadrukowaną, jednokolorową, siatką OWV. oraz inne.
-        <br /><br />
-
-        TABLICE WOLNOSTOJĄCE<br />
-        - Konstrukcje stalowe, osadzane w gruncie, odporne na warunki<br />
-        atmosferyczne, zabezpieczone antykorozyjnie.<br /><br />
-
-        SZYLDY/TABLICE <br />
-        - PCV + Grafika <br />
-        - BLACHA OCYNK + Grafika <br /><br />
-
-        BANERY<br />
-        - Wydruk na płótnie CLASSIC / SIATKA / ODBLASK<br /><br />
-
-        LOGO I NAPISY 3D<br />
-        - Wzory wycinane z płyt styrisolowych różnych grubości.<br />
-        Malowane wg projektu. <br /><br />
-
-        LOGO I NAPISY Z PLEXI<br />
-        - Wzory wycinane z plexi wg projektu.<br /><br />
-
-        LOGO I LITERY PODŚWIETLANE / KASETONY PODŚWIETLANE <br />
-        - Wzory wycinane z plexi wg projektu, podświetlenie LED<br /><br />
-
-        OZNAKOWANIA TECHNICZNE <br />
-        - PCV + Grafika<br />
-        - BLACHA OCYNK + Grafika<br />
-        - FOLIA MAGNETYCZNA + Grafika<br />
-        - PLEXI + Grafika<br />
-        - NAKLEJKI<br /><br />
-
-        POLIGRAFIA I GADŻETY REKLAMOWE<br />
-
-        - Wizytówki, Kalendarzyki, Ulotki, Plakaty, Naklejki ...<br />
-        - Czapeczki, Breloki, Smycze, Pendrive, Długopisy, Notesy ...<br /><br />
-
-        WYDRUKI CAD<br />
-        - Profesjonalne wydruki map, projektów, planów instalacji itp.<br />
-        Formaty od A4 do A0<br /><br />
-
-        KOSZULKI Z NADRUKIEM<br />
-        - Wysokiej jakości koszulki z nadrukiem metodą DTG / FLEX <br /><br />
-
-        CZYSZCZENIE<br />
-        - Oczyszczanie powierzchni, z starych folii, siatek OWV itp.
-        <br /><br />
-
-        INNE<br />
-        - Nietypowe ind. rozwiązania z zakresu identyfikacji <br />
-        wizualnej - prosimy o kontakt.<br /><br />
-
+      <div class="summary">
         Wszystkie produkty cechuje wysoka jakość i solidne wykonanie.<br />
         W celu bliższego zapoznania się z produktami z oferty, zapraszamy
         <br />
         do przejrzenia naszej galerii. <br /><br />
       </div>
     </div>
-  </div>
-  <script src="slider.js"></script>
-</body>
-
+    <div id="dol">
+      <h1>Zakres naszych usług:</h1>
+      <div class="flexcontainer">
+        <div class="container">
+          <img src="/obrazy/Oklejenie Dział Budowlany.jpg" class="image" />
+          <div class="title">
+            <h4>OKLEJANIE</h4>
+          </div>
+          <div class="middle">
+            <div class="description2">
+              Oklejenie witryn (szyb), pojazdów (powierzchni lakierowanych,
+              blach), plastiku oraz innych materiałów nadających się do
+              oklejenia. Oklejanie folią zadrukowaną, jednokolorową, siatką OWV
+              oraz inne.
+            </div>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <img
+            src="/obrazy/Tablica wolnostojąca z logo firmy Anna-Pal.jpg"
+            class="image"
+          />
+          <div class="title">
+            <h4>TABLICE WOLNOSTOJĄCE</h4>
+          </div>
+          <div class="middle">
+            <div class="description2">
+              Konstrukcje stalowe, osadzane w gruncie, odporne na warunki
+              atmosferyczne, zabezpieczone antykorozyjnie.
+            </div>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <img src="/obrazy/Szyld Stalowy Moda for you.jpg" class="image" />
+          <div class="title">
+            <h4>SZYLDY/TABLICE</h4>
+          </div>
+          <div class="middle">
+            <div class="description2">
+              <br />
+              PCV + Grafika <br />
+              <br />
+              Blacha ocynkowana + Grafika <br />
+            </div>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front one">
+            <div class="title">
+              <h4>Oklejanie</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>
+              Oklejenie witryn (szyb), pojazdów (powierzchni lakierowanych,
+              blach), plastiku oraz innych materiałów nadających się do
+              oklejenia. Oklejanie folią zadrukowaną, jednokolorową, siatką
+              OWV oraz inne.
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front two">
+            <div class="title">
+              <h4>Tablice Wolnostojące</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>
+              Konstrukcje stalowe, osadzane w gruncie, odporne na warunki
+              atmosferyczne, zabezpieczone antykorozyjnie.
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front three">
+            <div class="title">
+              <h4>Szyldy/Tablice</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p><br>
+              PCV + Grafika <br />
+              <br> BLACHA OCYNKowana + Grafika <br />
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front four">
+            <div class="title">
+              <h4>Banery</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>Wydruk na płótnie CLASSIC / SIATKA / ODBLASK
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front five">
+            <div class="title">
+              <h4>Loga i Napisy 3D/Plexi</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>WWzory wycinane z płyt styrisolowych różnych grubości lub plexi,
+              malowane według projektu. Możliwość podświetlenia LED.
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front six">
+            <div class="title">
+              <h4>Znaki Techniczne</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>- PCV + Grafika<br />
+              - BLACHA OCYNK + Grafika<br />
+              - FOLIA MAGNETYCZNA + Grafika<br />
+              - PLEXI + Grafika<br />
+              - NAKLEJKI<br /><br />
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front seven">
+            <div class="title">
+              <h4>Poligrafia i Gadżety Reklamowe</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>- Wizytówki, Kalendarzyki, Ulotki, Plakaty, Naklejki ...<br />
+              - Czapeczki, Breloki, Smycze, Pendrive, Długopisy, Notesy ...<br /><br />
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front eight">
+            <div class="title">
+              <h4>Wydruki CAD</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>Profesjonalne wydruki map, projektów, planów instalacji itp.<br />
+              Formaty od A4 do A0<br /><br />
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front nine">
+            <div class="title">
+              <h4>Koszulki z Nadrukiem</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>Wysokiej jakości koszulki z nadrukiem metodą DTG / FLEX
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front ten">
+            <div class="title">
+              <h4>Czyszczenie</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>Oczyszczanie powierzchni ze starych folii, siatek OWV itp.
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front eleven">
+            <div class="title">
+              <h4>Inne</h4>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <p>Nietypowe ind. rozwiązania z zakresu identyfikacji <br />
+              wizualnej - prosimy o kontakt.
+            </p>
+            <div class="buttonField">
+              <a href="#" class="myButton">Przejdź do galerii</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+      </div>
+    </div>
+    <div id="footer">
+      <div class="column1"></div>
+      <div class="column2">
+        <h5>Kontakt:</h5>
+        <h6>
+          <span><i class="fa fa-phone"></i></span>+48 38 63 148
+        </h6>
+        <h6>
+          <span><i class="fa fa-map-marker"></i></span> ul. Karlosiowa 18,
+          99-999 Reskoł
+        </h6>
+      </div>
+      <div class="column3">
+        <h5>Linki:</h5>
+        <a href="https://www.facebook.com/ReklamaReskopl-105222620874073/"
+          ><i class="fa fa-facebook-square fa-2x"></i
+        ></a>
+        <!-- <div class="iconLink">
+        Icons made by
+        <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a>
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div>
+      <div class="iconLink">
+        Icons made by
+        <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a>
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      </div> -->
+      </div>
+      <div class="column4"></div>
+    </div>
+    <script src="slider.js"></script>
+  </body>
 </html>
