--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Dojeżdżamy do klienta"
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/index/style.css" />
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
   </head>
 
@@ -411,6 +411,6 @@ Dojeżdżamy do klienta"
       </div>
       <div class="column4"></div>
     </div>
-    <script src="slider.js"></script>
+    <script src="/index/slider.js"></script>
   </body>
 </html>
