--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Dojeżdżamy do klienta"
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/index/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
   </head>
 
@@ -45,7 +45,7 @@ Dojeżdżamy do klienta"
     </div>
     <div id="topnav">
       <a href="#home" class="link active">Oferta</a>
-      <a href="#news" class="link">Galeria</a>
+      <a href="/galeria/gallery.html" class="link">Galeria</a>
       <a href="#contact" class="link">O firmie</a>
       <a href="#about" class="link">Kontakt</a>
       <a href="javascript:void(0);" class="icon" onclick="openNav()">
