--- a/galeria/gallery.html
+++ b/galeria/gallery.html
@@ -1,104 +1,119 @@
 <!DOCTYPE html>
 
 <html lang="pl">
-  <head>
-    <!-- <meta http-equiv="Content-Language" content="pl" /> -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G&amp;HD - OFERTA</title>
-    <meta
-      name="Keywords"
-      content="
+
+<head>
+  <!-- <meta http-equiv="Content-Language" content="pl" /> -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>G&amp;HD - OFERTA</title>
+  <meta name="Keywords" content="
 reklama Resko, reklama Łobez, reklama płoty, reklamy, oklejanie samochodów,
 oklejanie sklepów, wydruki wielkoformatowe,tablice reklamowe,
 banery, oznakowania techniczne, ulotki, wizytówki, plakaty
-"
-    />
-    <meta
-      name="description"
-      content="PROJEKT GRAFICZNY / WYKONANIE PRODUKTU / MONTAŻ.
+" />
+  <meta name="description" content="PROJEKT GRAFICZNY / WYKONANIE PRODUKTU / MONTAŻ.
 Oklejanie pojazdów i sklepów, tablice wolnostojące, szyldy/tablice, banery, logo i napisy 3D, litery podświetlane, wizytówki, plakaty.
-Dojeżdżamy do klienta"
-    />
-    <meta name="author" content="Roussoss" />
-    <meta name="wszelkie prawa" content="G&amp;HD" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kanit&family=Acme&family=Bangers&family=Alegreya&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="http://fonts.googleapis.com/css?family=Alata&subset=latin,latin-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="/galeria/galleryStyle.css" />
-  </head>
+Dojeżdżamy do klienta" />
+  <meta name="author" content="Roussoss" />
+  <meta name="wszelkie prawa" content="G&amp;HD" />
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Acme&family=Bangers&family=Alegreya&display=swap"
+    rel="stylesheet" />
+  <link href="http://fonts.googleapis.com/css?family=Alata&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/galeria/galleryStyle.css" />
+</head>
 
-  <body>
-    <div id="header">
-      <img id="logo" src="/resources/header/logo.png" />
-    </div>
-    <div id="topnav">
-      <a href="../index.html" class="link">Oferta</a>
-      <a href="#news" class="link active">Galeria</a>
+<body>
+  <div id="header">
+    <img id="logo" src="/resources/header/logo.png" />
+  </div>
+  <div id="topnav">
+    <a href="../index.html" class="link">Oferta</a>
+    <a href="#news" class="link active">Galeria</a>
+    <a href="#contact" class="link">O firmie</a>
+    <a href="#about" class="link">Kontakt</a>
+    <a href="javascript:void(0);" class="icon" onclick="openNav()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  <div id="responsiveNav" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+      <a href="#home" class="link active">Oferta</a>
+      <a href="#news" class="link">Galeria</a>
       <a href="#contact" class="link">O firmie</a>
       <a href="#about" class="link">Kontakt</a>
-      <a href="javascript:void(0);" class="icon" onclick="openNav()">
-        <i class="fa fa-bars"></i>
-      </a>
     </div>
-    <div id="responsiveNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <div class="overlay-content">
-        <a href="#home" class="link active">Oferta</a>
-        <a href="#news" class="link">Galeria</a>
-        <a href="#contact" class="link">O firmie</a>
-        <a href="#about" class="link">Kontakt</a>
+  </div>
+  <div class="portfolio">
+      <div class="row">
+				<div class="col-md-12 text-center">
+					<ul id="filter-list">
+						<li class="filter-button active" data-filter="all">WSZYSTKIE</li>
+						<li class="filter-button" data-filter="oklejanie">OKLEJANIE</li>
+						<li class="filter-button" data-filter="tablice">TABLICE WOLNOSTOJĄCE</li>
+						<li class="filter-button" data-filter="szyldy">SZYLDY/TABLICE</li>
+					</ul>
+				</div>
+			</div>
+    <div class="gallery">
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter oklejanie">
+        <img src="/obrazy/Oklejenie Autokaru1.jpg" class="img-responsive" />
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter tablice">
+        <img src="/obrazy/Tablica wolnostojąca Swedwood Resko 7.jpg" class="img-responsive" />
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter szyldy">
+        <img src="/obrazy/Szyld na blasze Salon meblowy.jpg" class="img-responsive" />
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter oklejanie">
+        <img src="/obrazy/Oklejenie Skoda Security patrol2.jpg" class="img-responsive" />
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter tablice">
+        <img src="/obrazy/Tablica wolnostojąca z logo firmy Anna-Pal.jpg" class="img-responsive" />
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter szyldy">
+        <img src="/obrazy/Szyld Stalowy Moda for you.jpg" class="img-responsive" />
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter oklejanie">
+        <img src="/obrazy/Oklejenie VW Lt Deker-Pol 3.jpg" class="img-responsive" />
+      </div>
+      <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-4 filter tablice">
+        <img src="/obrazy/Tabliczki Promocyjne.jpg" class="img-responsive" />
       </div>
     </div>
-    <div class="portfolio">
-      <div class="container">
-        <div class="heading">
-          <h1>Kategorie</h1>
-        </div>
-        <div class="filter-btn">
-          <ul>
-            <li>Wszystkie</li>
-            <li>Oklejanie</li>
-            <li>Tablice Wolnostojące</li>
-            <li>Szyldy/Tablice</li>
-          </ul>
-        </div>
-        <div class="items">
-        </div>
-      </div>
+  </div>
+
+  <div id="footer">
+    <div class="column1"></div>
+    <div class="column2">
+      <h5>Kontakt:</h5>
+      <h6>
+        <span><i class="fa fa-phone"></i></span>+48 38 63 148
+      </h6>
+      <h6>
+        <span><i class="fa fa-map-marker"></i></span> ul. Karlosiowa 18,
+        99-999 Reskoł
+      </h6>
     </div>
-    <div id="footer">
-      <div class="column1"></div>
-      <div class="column2">
-        <h5>Kontakt:</h5>
-        <h6>
-          <span><i class="fa fa-phone"></i></span>+48 38 63 148
-        </h6>
-        <h6>
-          <span><i class="fa fa-map-marker"></i></span> ul. Karlosiowa 18,
-          99-999 Reskoł
-        </h6>
-      </div>
-      <div class="column3">
-        <h5>Linki:</h5>
-        <a href="https://www.facebook.com/ReklamaReskopl-105222620874073/"
-          ><i class="fa fa-facebook-square fa-2x"></i
-        ></a>
-      </div>
-      <div class="column4"></div>
+    <div class="column3">
+      <h5>Linki:</h5>
+      <a href="https://www.facebook.com/ReklamaReskopl-105222620874073/"><i class="fa fa-facebook-square fa-2x"></i></a>
     </div>
-    <script src="/index/slider.js"></script>
-  </body>
+    <div class="column4"></div>
+  </div>
+  <!-- <script src="/index/slider.js"></script> -->
+<script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="gallery.js"></script>
+</body>
 </html>
