--- a/index.html
+++ b/index.html
@@ -71,32 +71,32 @@ Dojeżdżamy do klienta"
       <div class="slider" id="slider">
         <div class="slides current">
           <div class="description">
-            <h1>Oklejanie witryn sklepów</h1>
+            <h1>Oklejanie witryn <br>sklepów</h1>
             <p>Twój biznes w nowej odsłonie</p>
           </div>
         </div>
         <div class="slides">
           <div class="description">
-            <h1>Znaki techniczne</h1>
-            <p>Dla firm, sklepów, zakładów przemysłowych</p>
+            <h1>Znaki <br>techniczne</h1>
+            <p>Dla firm, sklepów, zakładów<br> przemysłowych</p>
           </div>
         </div>
         <div class="slides">
           <div class="description">
             <h1>Szyldy i banery</h1>
-            <p>Wysokiej jakości banery dla każdej działalności</p>
+            <p>Wysokiej jakości banery dla<br> każdej działalności</p>
           </div>
         </div>
         <div class="slides">
           <div class="description">
-            <h1>Oklejanie pojazdów</h1>
+            <h1>Oklejanie <br>pojazdów</h1>
             <p>Dowolnie okleimy Twój samochód</p>
           </div>
         </div>
         <div class="slides slidelast">
           <div class="description">
             <h1>Wydruki CAD</h1>
-            <p>Wielkoformatowe wydruki map, projektów, planów i instalacji</p>
+            <p>Wielkoformatowe wydruki map, <br>projektów, planów i instalacji</p>
           </div>
         </div>
         <i class="fa fa-angle-left prev" id="prev"></i>
